[package]
name = "which_rs_gpt"
version = "0.1.0"
authors = ["mac <mac@example.com>"]
edition = "2018"
default-run = "which_rs_gpt"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
tempfile = "3.2"
clap = "4.4.6"
once_cell = "1.18.0"
lazy_static = "1.4"


[lib]
name = "which_rs_gpt"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2.0.2"


[[bin]]
name = "which_rs_gpt"
path = "src/bin/main.rs"