[package]
name = "bzip2_rs_gpt"
version = "0.1.0"
edition = "2021"
default-run = "bzip2_rs_gpt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"  # Use the latest version suitable for your project
filetime = "0.2"  # 使用最新的版本号
rustix = "0.27"   # 使用最新的版本号
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
bzip2 = "0.4"
tempfile = "3.2"
libc = "0.2"
rand = "0.8.5"

[lib]
name = "bzip2_rs_gpt"

[[bin]]
name = "bzip2_rs_gpt"
path = "src/bin/main.rs"
